test/failing/nostruct1.trunnel

struct x {
  struct y yy;
}

